feat: Adicionando rotas de Update, Delete no CRUD do recurso Projeto
