# backend/src/resources/projeto/projeto.controller.ts
@@ -1,12 +1,17 @@
 import { Request, Response } from "express";
 import { ReasonPhrases, StatusCodes } from "http-status-codes";
-import { listProjetos, createProjeto } from "./projeto.service";
-import { CreateProjetoDto } from "./projeto.type";
+import { 
+    listProjetos, 
+    createProjeto, 
+    updateProjeto, 
+    readProjeto, 
+    deleteProjeto } from "./projeto.service";
+import { CreateProjetoDto, UpdateProjetoDto } from "./projeto.type";
 
 
 const index = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Recupera os dados de todos os projetos da base de dados.'
+    #swagger.summary = 'Recupera os dados de todos os projetos.'
     */
     const skip = req.query.skip ? parseInt(req.query.skip?.toString()) : undefined;
     const take = req.query.take ? parseInt(req.query.take?.toString()) : undefined;
@@ -20,7 +25,7 @@ const index = async (req: Request, res: Response) => {
 
 const create = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Adiciona um novo projeto na base de dados.'
+    #swagger.summary = 'Adiciona um novo projeto.'
     #swagger.parameters['body'] = {
         in: 'body',
         schema: { $ref: '#/definitions/CreateProjetoDto' }
@@ -37,9 +42,57 @@ const create = async (req: Request, res: Response) => {
     } catch (err){
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
     }
-
-
 };
 
-export default { index, create };
+const update = async (req: Request, res: Response) => {
+    /*
+    #swagger.summary = 'Atualiza dados um projeto específico.'
+    #swagger.parameters['id'] = { description: 'ID do projeto' }
+    #swagger.parameters['body'] = {
+        in: 'body',
+        schema: { $ref: '#/definitions/UpdateProjetoDto' }
+    }
+    */
+    const { id } = req.params;
+    const projeto = req.body as UpdateProjetoDto;
+    try {
+        const updatedProjeto = await updateProjeto(id, projeto);
+        res.status(StatusCodes.NO_CONTENT).json(updatedProjeto);
+    } catch (err) {
+        res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
+    } 
+};
+
+const read = async (req: Request, res: Response) => {
+    /*
+    #swagger.summary = 'Recupera um projeto específico.'
+    #swagger.parameters['id'] = { description: 'ID do projeto' }
+    #swagger.responses[200] = {
+        schema: { $ref: '#/definitions/Projeto' }
+    }
+    */
+    const { id } = req.params;
+    try {
+        const projeto = await readProjeto(id);
+        res.status(StatusCodes.OK).json(projeto);
+    } catch (err) {
+        res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
+    }
+};
+
+const remove = async (req: Request, res: Response) => {
+    /*
+    #swagger.summary = 'Torna um projeto inativo.'
+    #swagger.parameters['id'] = { description: 'ID do produto' }
+    */
+    const { id } = req.params;
+    try {
+        const deletedProjeto = await deleteProjeto(id);
+        res.status(StatusCodes.NO_CONTENT).json(deletedProjeto);
+    } catch (err) {
+        res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
+    } 
+};
+
+export default { index, create, update, read, remove };
 
